# textiled

./: .gitignore  NOTES.md  README.md  REPORT.md  pyproject.toml
outputs/dark/: dark_grid_model.json  dark_sam3_grid_geometry.json
outputs/herringbone/: herringbone_grid_model.json  herringbone_sam3_grid_geometry.json
outputs/sam3_sample/: dark_sam3_grid_geometry.json  herringbone_sam3_grid_geometry.json
outputs/simple/: simple_grid_model.json  simple_sam3_grid_geometry.json
src/: parquet_sam_grid.py  workflow_types.py
src/fitting/: plank_grid_fit.py
src/parquet/: seam_highlight.py
src/sam/: artifacts.py  backend.py  grid_fitters.py  logging_setup.py  preprocessing.py
