[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textiled"
version = "0.1.0"
description = "SAM-based parquet plank grid extraction pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip @ git+https://github.com/ultralytics/CLIP.git",
    "huggingface-hub>=0.28.0",
    "opencv-python>=4.10.0",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "timm>=1.0.0",
    "ultralytics>=8.4.46",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sam*", "fitting*", "parquet*"]

[tool.setuptools]
py-modules = ["parquet_sam_grid"]

[project.scripts]
sam3-segment-sample = "parquet_sam_grid:main"
parquet-sam-grid = "parquet_sam_grid:main"
